# llm-demo

./: README.md
llm-demo/: .gitignore  README.md  elm.json  index.html  interop.js  package.json
llm-demo/src/: Main.elm
llm-server/: .gitignore  Cargo.toml  README.md
llm-server/src/: broadcast.rs  handler.rs  main.rs
