[package]
name = "llm-server"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3.30"
reqwest = { version = "0.12.5", features = ["stream"] }
actix-cors = "0.7.0"
actix-web = "4"
actix-web-lab = "0.18.5"
parking_lot = "0.12.1"
futures-util = { version = "0.3.25", default-features = false, features = ["std"] }
dotenv = "0.15.0"
tokio = "1.39.1"
serde = { version = "1.0.204", features = ["derive"]}
log = "0.4.22"
env_logger = "0.11.5"
clap = { version = "4.5.11", features = ["derive"] }
serde_json = "1.0.120"
